--- a/sites/home.html
+++ b/sites/home.html
@@ -31,10 +31,15 @@
                 </div>
             </div>
 
-            <div class = "text">
-                <p>sdfghj</p>
+            <div class = "home-text">
+                <p class="slide-in"> Hello, I'm Jimmy!</p>
             </div>
+            <div class = "home-description">
+                <p class="fade-in"> &emsp;&emsp;&emsp;I am a second year student studying at California State Polytechnic Pomona, with an interest in cybersecurity. I participate in a club called Students With and Interest in the Future of Technology (SWIFT) and am eager to keep improving my knowledge about cybersecurity and software development. Currently, I participate in both red teaming and blue teaming competitions such as the Collegiate Cyber Defense Competition (CCDC), Hivestorm, and the National Centers of Academic Excellence in CybersecurityCompetition (NCAE-C). </p>
+            </div>
+
         </div>
+        
 
         <script>
             document.getElementById("redirect-home").addEventListener("click", function() {
