--- a/sites/experience.html
+++ b/sites/experience.html
@@ -30,12 +30,32 @@
                     <img id = "redirect-instagram"; class = "logo"; src = ../logos/instagram.png>
                 </div>
             </div>
-
-            <div class = "text">
-                <p>sdfghj</p>
+            
+            <div class = "home-text">
+                <FadeInSection>
+                    <p class="slide-in"> Hello, I'm Jimmy!</p>
+                </FadeInSection>
+            </div>
+            <div class = "home-description">
+                <p class="experience-text"> &emsp;&emsp;&emsp;I am a second year student studying at California State Polytechnic Pomona, with an interest in cybersecurity. I participate in a club called Students With and Interest in the Future of Technology (SWIFT) and am eager to keep improving my knowledge about cybersecurity and software development. Currently, I participate in both red teaming and blue teaming competitions such as the Collegiate Cyber Defense Competition (CCDC), Hivestorm, and the National Centers of Academic Excellence in CybersecurityCompetition (NCAE-C). </p>
+            </div>
+            <div class = "home-text">
+                <p class="experience-text1"> Hello, I'm Jimmy!</p>
+            </div>
+            <div class = "home-description">
+                <p class="experience-text1"> &emsp;&emsp;&emsp;I am a second year student studying at California State Polytechnic Pomona, with an interest in cybersecurity. I participate in a club called Students With and Interest in the Future of Technology (SWIFT) and am eager to keep improving my knowledge about cybersecurity and software development. Currently, I participate in both red teaming and blue teaming competitions such as the Collegiate Cyber Defense Competition (CCDC), Hivestorm, and the National Centers of Academic Excellence in CybersecurityCompetition (NCAE-C). </p>
+            </div>
+            <div class = "home-description">
+                <p class="experience-text"> &emsp;&emsp;&emsp;I am a second year student studying at California State Polytechnic Pomona, with an interest in cybersecurity. I participate in a club called Students With and Interest in the Future of Technology (SWIFT) and am eager to keep improving my knowledge about cybersecurity and software development. Currently, I participate in both red teaming and blue teaming competitions such as the Collegiate Cyber Defense Competition (CCDC), Hivestorm, and the National Centers of Academic Excellence in CybersecurityCompetition (NCAE-C). </p>
+            </div>
+            <div class = "home-text">
+                <p class="experience-text"> Hello, I'm Jimmy!</p>
+            </div>
+            <div class = "home-description">
+                <p class="experience-text"> &emsp;&emsp;&emsp;I am a second year student studying at California State Polytechnic Pomona, with an interest in cybersecurity. I participate in a club called Students With and Interest in the Future of Technology (SWIFT) and am eager to keep improving my knowledge about cybersecurity and software development. Currently, I participate in both red teaming and blue teaming competitions such as the Collegiate Cyber Defense Competition (CCDC), Hivestorm, and the National Centers of Academic Excellence in CybersecurityCompetition (NCAE-C). </p>
             </div>
         </div>
-
+       
         <script>
             document.getElementById("redirect-home").addEventListener("click", function() {
               window.location.replace("home.html");
