--- a/sites/blog.html
+++ b/sites/blog.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Jimbobicle's Website</title>
-        <link rel = "stylesheet" href = "../index.css">
+        <link rel = "stylesheet" href = "../css/index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -36,46 +36,6 @@
             </div>
         </div>
 
-        <script>
-            document.getElementById("redirect-home").addEventListener("click", function() {
-              window.location.replace("home.html");
-            });
-        </script>
-        <script>
-            document.getElementById("redirect-experience").addEventListener("click", function() {
-              window.location.replace("experience.html");
-            });
-        </script>
-        <script>
-            document.getElementById("redirect-education").addEventListener("click", function() {
-              window.location.replace("education.html");
-            });
-        </script>
-        <script>
-            document.getElementById("redirect-certifications").addEventListener("click", function() {
-              window.location.replace("certifications.html");
-            });
-        </script>
-        <script>
-            document.getElementById("redirect-blog").addEventListener("click", function() {
-              window.location.replace("blog.html");
-            });
-        </script>
-        <script>
-            document.getElementById("redirect-linkedin").addEventListener("click", function() {
-              window.open("https://www.linkedin.com/in/jimmy-peng-43bb89218/");
-            });
-        </script>
-        <script>
-            document.getElementById("redirect-github").addEventListener("click", function() {
-                window.open("https://github.com/JimmyP8899");
-              
-            });
-        </script>
-        <script>
-            document.getElementById("redirect-instagram").addEventListener("click", function() {
-              window.open("https://www.instagram.com/jimmypeng_xd/");
-            });
-        </script>
+        <script src = "../scripts/script.js"></script>
     </body>
 </html>
