--- a/sites/home.html
+++ b/sites/home.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Jimbobicle's Website</title>
-        <link rel = "stylesheet" href = "../index.css">
+        <link rel = "stylesheet" href = "../css/index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -32,55 +32,13 @@
             </div>
 
             <div class = "home-text">
-                <p class="slide-in"> Hello, I'm Jimmy!</p>
+                    <p class="hidden"> Hello, I'm Jimmy!</p>
             </div>
             <div class = "home-description">
-                <p class="fade-in"> &emsp;&emsp;&emsp;I am a second year student studying at California State Polytechnic Pomona, with an interest in cybersecurity. I participate in a club called Students With and Interest in the Future of Technology (SWIFT) and am eager to keep improving my knowledge about cybersecurity and software development. Currently, I participate in both red teaming and blue teaming competitions such as the Collegiate Cyber Defense Competition (CCDC), Hivestorm, and the National Centers of Academic Excellence in CybersecurityCompetition (NCAE-C). </p>
+                <p class="hidden"> &emsp;&emsp;&emsp;I am a second year student studying at California State Polytechnic Pomona, with an interest in cybersecurity. I participate in a club called Students With and Interest in the Future of Technology (SWIFT) and am eager to keep improving my knowledge about cybersecurity and software development. Currently, I participate in both red teaming and blue teaming competitions such as the Collegiate Cyber Defense Competition (CCDC), Hivestorm, and the National Centers of Academic Excellence in CybersecurityCompetition (NCAE-C). </p>
             </div>
 
         </div>
-        
-
-        <script>
-            document.getElementById("redirect-home").addEventListener("click", function() {
-              window.location.replace("home.html");
-            });
-        </script>
-        <script>
-            document.getElementById("redirect-experience").addEventListener("click", function() {
-              window.location.replace("experience.html");
-            });
-        </script>
-        <script>
-            document.getElementById("redirect-education").addEventListener("click", function() {
-              window.location.replace("education.html");
-            });
-        </script>
-        <script>
-            document.getElementById("redirect-certifications").addEventListener("click", function() {
-              window.location.replace("certifications.html");
-            });
-        </script>
-        <script>
-            document.getElementById("redirect-blog").addEventListener("click", function() {
-              window.location.replace("blog.html");
-            });
-        </script>
-        <script>
-            document.getElementById("redirect-linkedin").addEventListener("click", function() {
-              window.open("https://www.linkedin.com/in/jimmy-peng-43bb89218/");
-            });
-        </script>
-        <script>
-            document.getElementById("redirect-github").addEventListener("click", function() {
-                window.open("https://github.com/JimmyP8899");
-              
-            });
-        </script>
-        <script>
-            document.getElementById("redirect-instagram").addEventListener("click", function() {
-              window.open("https://www.instagram.com/jimmypeng_xd/");
-            });
-        </script>
+        <script src = "../scripts/script.js"></script>
     </body>
 </html>
