--- a/sites/education.html
+++ b/sites/education.html
@@ -31,9 +31,13 @@
                 </div>
             </div>
 
-            <div class = "text">
-                <p>sdfghj</p>
+            <div class = "education-text">
+                <img class = "education-pictures"; src = "../pictures/cpp.png">
+                <p class = "hidden"><strong>California State Polytechnic Pomona </strong>- Bachelor's of Computer Science (2021-2024)</p>
+                <img class = "education-pictures1"; src = "../pictures/IB.png">
+                <p class = "hidden"><strong>Mira Loma High School </strong>- International Baccalaureate Diploma (2017-2021)</p>
             </div>
+            
         </div>
 
         <script src = "../scripts/script.js"></script>
