--- a/sites/experience.html
+++ b/sites/experience.html
@@ -35,11 +35,11 @@
                 <secion class="hidden"> National Hivestorm Competition</section>
             </div>
             <div class = "home-description">
-                <section class = "hidden"> &#x2022;Placed 1st Nationally. <br>
-                    &#x2022;Solved Forensics questions auditing Ubuntu and Debian machines on the environment.<br>
+                <section class = "hidden"> &#x2022;Placed 1st Nationally. <br><br>
+                    &#x2022;Solved Forensics questions auditing Ubuntu and Debian machines on the environment.<br><br>
                     &#x2022;Deployed Bourne again shell (Bash) scripts to set secure file permissions, change user passwords, update
                     system, remove unneeded packages, and check for Set-user Identification (SUID) and Set-group
-                    Identification bits (SGID).<br>
+                    Identification bits (SGID).<br><br>
                     &#x2022;Configured logging for scored services (OpenVPN) and disabled unnecessary services. Implemented
                     secure pluggable authentication module (PAM), password, and SSH lockout policies. Monitored Network
                     traffic and user SSH sessions, set up Host-Level Inbound Firewall rules using Uncomplicated Firewall
@@ -53,8 +53,8 @@
             <div class = "home-description">
                 <section class="hidden">  &#x2022;Developed and deployed Bash scripts for configuring inbound and outbound Host-Level firewall rules
                     using iptables, changing user passwords, and taking inventory of services and packages on the system.
-                    <br>&#x2022;Applied automatic backups of scored service configuration files and MySQL databases.
-                    <br>&#x2022;Detected and responded to malicious behavior and created incidence response reports on red team
+                    <br><br>&#x2022;Applied automatic backups of scored service configuration files and MySQL databases.
+                    <br><br>&#x2022;Detected and responded to malicious behavior and created incidence response reports on red team
                     activity. Wrote business reports for executives from the company.
                      </section>
             </div>
@@ -64,11 +64,11 @@
             </div>
             <div class = "home-description">
                 <section class="hidden">  &#x2022;Performed Open Source Intelligence (OSINT) on company, used Maltego to graph information.
-                    <br>&#x2022;Wrote finding blocks on vulnerabilities including their descriptions, business and technical impact,
+                    <br><br>&#x2022;Wrote finding blocks on vulnerabilities including their descriptions, business and technical impact,
                     likelihood, compliance violations, exploitation details, and remediation steps.
-                    <br>&#x2022;Examined WiFi penetration testing techniques (Evil Twin, FTP Bounce, WPS Pixie dust). Used
+                    <br><br>&#x2022;Examined WiFi penetration testing techniques (Evil Twin, FTP Bounce, WPS Pixie dust). Used
                     Airgeddon, aircrack-ng suite, and wifite to carry out attack vectors.
-                    <br>&#x2022;Used email to perform a phishing campaign to test employees' ability to respond and recognize social
+                    <br><br>&#x2022;Used email to perform a phishing campaign to test employees' ability to respond and recognize social
                     engineering attempts.</section>
             </div>
             <img class = "swift-pictures"; src = "../pictures/SWIFT.png">
@@ -77,10 +77,10 @@
             </div>
             <div class = "home-description">
                 <section class="hidden"> &#x2022;Mentored a group of students on defensive and offensive security topics.
-                    <br>&#x2022;Developed Windows Server 2016 and Ubuntu 22.04 machines for Red vs. Blue simulation virtual
+                    <br><br>&#x2022;Developed Windows Server 2016 and Ubuntu 22.04 machines for Red vs. Blue simulation virtual
                     environments for college competitors. Acted as an active red team during the competition. Set up
                     phishing emails and social engineering attempts to test competitors awareness.
-                    <br>&#x2022;Led workshops covering cybersecurity topics like penetration testing tools and their uses, setting up
+                    <br><br>&#x2022;Led workshops covering cybersecurity topics like penetration testing tools and their uses, setting up
                     WordPress with a LAMP stack, Linux System administration, and google search operators.
                     </section>
             </div>
@@ -90,7 +90,7 @@
             </div>
             <div class = "home-description">
                 <section class="hidden"> &#x2022;Constructed secure service configurations for FTP on Linux distributions against an active red team.
-                    <br>&#x2022;Answered CTF questions about general security principles and the infrastructure on the environment.</section>
+                    <br><br>&#x2022;Answered CTF questions about general security principles and the infrastructure on the environment.</section>
             </div>
            
         
