--- a/sites/blog.html
+++ b/sites/blog.html
@@ -34,6 +34,26 @@
             <div class = "text">
                 <p>sdfghj</p>
             </div>
+            <div class="waviy">
+                <span style="--i:1; margin-left: 30%; margin-top: 10%;">B</span>
+                <span style="--i:2">L</span>
+                <span style="--i:3">O</span>
+                <span style="--i:4">G</span>
+                <span style="--i:5; margin-left: 1.5%">C</span>
+                <span style="--i:6">O</span>
+                <span style="--i:7">M</span>
+                <span style="--i:8">I</span>
+                <span style="--i:9">N</span>
+                <span style="--i:10">G</span>
+                <span style="--i:11; margin-left: 1.5%">S</span>
+                <span style="--i:12">O</span>
+                <span style="--i:13">O</span>
+                <span style="--i:14">N</span>
+
+        
+
+
+               </div>
         </div>
 
         <script src = "../scripts/script.js"></script>
