--- a/sites/home.html
+++ b/sites/home.html
@@ -35,7 +35,7 @@
                     <p class="hidden"> Hello, I'm Jimmy!</p>
             </div>
             <div class = "home-description">
-                <p class="hidden"> &emsp;&emsp;&emsp;I am a second year student studying at California State Polytechnic Pomona, with an interest in cybersecurity. I participate in a club called Students With an Interest in the Future of Technology (SWIFT) and am eager to keep improving my knowledge about cybersecurity and software development. Currently, I participate in both red teaming and blue teaming competitions such as the Collegiate Cyber Defense Competition (CCDC), Hivestorm, and the National Centers of Academic Excellence in CybersecurityCompetition (NCAE-C). </p>
+                <p class="hidden"> &emsp;&emsp;&emsp;I am a Computer Science student studying at California State Polytechnic Pomona, with an interest in cybersecurity. I participate in a club called Students With an Interest in the Future of Technology (SWIFT) and am eager to keep improving my knowledge about cybersecurity and software development. Currently, I participate in both red teaming and blue teaming competitions such as the Collegiate Cyber Defense Competition (CCDC), Hivestorm, and the National Centers of Academic Excellence in CybersecurityCompetition (NCAE-C). </p>
             </div>
 
         </div>
