--- a/sites/experience.html
+++ b/sites/experience.html
@@ -3,9 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Timeline Experience</title>
-<link rel = "stylesheet" href = "../css/index.css">
+        <title>Jimbobicle's Website</title>
+        <link rel = "stylesheet" href = "../css/index.css">
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class = "page">
@@ -118,5 +121,6 @@
 
 </div>
 </div>
+<script src = "../scripts/script.js"></script>
 </body>
 </html>
