--- a/sites/experience.html
+++ b/sites/experience.html
@@ -44,7 +44,7 @@
     </div>
   </div>
   <div class="timeline-item">
-    <img class = "swift-pictures"; src = "../pictures/swift.png">
+    <img class = "swift-pictures"; src = "../pictures/SWIFT.png">
     <div class="timeline-period">Jun 2023 - Mar 2024</div>
     <div class="timeline-item-content">
       
